--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta property="og:title" content="The Mystery Match" />
+    <meta
+      name="image"
+      property="og:image"
+      content="%PUBLIC_URL%/thumbnail.png"
+    />
+    <!-- <meta charset="utf-8" /> -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
