thumbnail changed and the content

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,12 @@
       property="og:image"
       content="%PUBLIC_URL%/thumbnail.png"
     />
+    <meta name="author" content="The Bounty Hunters" />
+    <meta
+      property="og:description"
+      content="This platform will serve as a bridge between Sherlock & potential assistant detectives."
+    />
+    <meta property="og:url" content="https://yashpande.netlify.app/" />
     <!-- <meta charset="utf-8" /> -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
