--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta
       name="image"
       property="og:image"
-      content="%PUBLIC_URL%/thumbnail.jpeg"
+      content="${require(`./src/static/images/thumbnail.jpeg`)}"
     />
     <meta name="author" content="The Bounty Hunters" />
     <meta
@@ -22,7 +22,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
+    <link rel="apple-touch-icon" href="${require(`./src/static/images/thumbnail.jpeg`)}" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
